Solved grid overflowing outside of drawing area. Solved the issue of applying event handler to color background on the container.

--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,24 @@
-html, body {
-    height:100%;
-    width:100%;
-    margin:0;
-    padding:0;
-} /*add this so that we can set the mainContainer height to be 100% (fit the window height) */
+body {
+    display: flex;
+    justify-content: center;
+    margin:20px;
+} 
 
-.mainContainer {
+.containerGrid {
     display: flex;
     flex-direction: column;
+    border: 1px solid black;
+    width: 300px;
+    height: 300px;
 }
 
-.container {
+.containerRow {
     display: flex;
+    flex: 1;
 }
 
-.container .grid {
-    border: 1px solid lightgrey;
-    padding: 20px;
-    flex: 1;  
+.containerRow .grid {
+    /* border: 1px solid lightgrey; */
+    flex: 1;
 }
 
